Updated documentation of --batchmode

--- a/inst/templates/scenario.txt.tmpl
+++ b/inst/templates/scenario.txt.tmpl
@@ -157,8 +157,8 @@
 # mpi = 0
 
 ## Specify how irace waits for jobs to finish when targetRunner submits
-## jobs to a batch cluster: sge, pbs, torque or slurm. targetRunner must
-## submit jobs to the cluster using, for example, qsub.
+## jobs to a batch cluster: sge, pbs, torque, slurm or htcondor.
+## targetRunner must submit jobs to the cluster using, for example, qsub.
 # batchmode = 0
 
 ## Enable/disable the soft restart strategy that avoids premature
