--- a/inst/templates/target-runner.tmpl
+++ b/inst/templates/target-runner.tmpl
@@ -21,49 +21,57 @@ error() {
     exit 1
 }
 
-EXE=~/bin/program
-FIXED_PARAMS=""
-
+# This parses the arguments given by irace. Do not touch it!
 CONFIG_ID=$1
 INSTANCE_ID=$2
 SEED=$3
 INSTANCE=$4
 shift 4 || error "Not enough parameters"
 CONFIG_PARAMS=$*
+# End of parsing
 
-STDOUT=c${CONFIG_ID}-${INSTANCE_ID}-${SEED}.stdout
-STDERR=c${CONFIG_ID}-${INSTANCE_ID}-${SEED}.stderr
+# EDIT THIS: Path to your executable
+EXE=~/bin/program 
+# EDIT THIS: Specify how parameters are given to your executable
+EXE_PARAMS="--time 5 -i $INSTANCE --seed ${SEED} ${CONFIG_PARAMS}"
 
 if [ ! -x "${EXE}" ]; then
     error "${EXE}: not found or not executable (pwd: $(pwd))"
 fi
 
-# If the program just prints a number, we can use 'exec' to avoid
-# creating another process, but there can be no other commands after exec.
-#exec $EXE ${FIXED_PARAMS} -i $INSTANCE --seed ${SEED} ${CONFIG_PARAMS}
+# # If the program just prints a number, we can use 'exec' to avoid creating
+# # another process, but there can be no other commands after exec, only exit.
+# exec $EXE ${EXE_PARAMS}
 # exit 1
-# 
-# Otherwise, save the output to a file, and parse the result from it.
-# (If you wish to ignore segmentation faults you can use '{}' around
-# the command.)
-$EXE ${FIXED_PARAMS} -i $INSTANCE --seed ${SEED} ${CONFIG_PARAMS} 1> ${STDOUT} 2> ${STDERR}
 
-# # This may be used to introduce a delay if there are filesystem
-# # issues.
+# These files are saved in execDir. Saving them in /tmp may be faster. 
+STDOUT=c${CONFIG_ID}-${INSTANCE_ID}-${SEED}.stdout
+STDERR=c${CONFIG_ID}-${INSTANCE_ID}-${SEED}.stderr
+
+# # Otherwise, save the output to a file, and parse the result from it.  (If
+# # you wish to ignore segmentation faults you can use '{}' around the
+# # command.)
+$EXE ${EXE_PARAMS} 1> ${STDOUT} 2> ${STDERR}
+# # If the above command fails, but you are not sure why, it may be useful to
+# # print it like:
+# echo "$EXE ${EXE_PARAMS} 1> ${STDOUT} 2> ${STDERR}"
+
+# # This may be used to introduce a delay if there are filesystem issues.
 # SLEEPTIME=1
 # while [ ! -s "${STDOUT}" ]; do
 #     sleep $SLEEPTIME
 #     let "SLEEPTIME += 1"
 # done
 
-# This is an example of reading a number from the output.
-# It assumes that the objective value is the first number in
-# the first column of the last line of the output.
-if [ -s "${STDOUT}" ]; then
-    COST=$(tail -n 1 ${STDOUT} | grep -e '^[[:space:]]*[+-]\?[0-9]' | cut -f1)
-    echo "$COST"
-    rm -f "${STDOUT}" "${STDERR}"
-    exit 0
-else
+if [ ! -s "${STDOUT}" ]; then
     error "${STDOUT}: No such file or directory"
 fi
+# This is an example of reading a number from the output.  It assumes that the
+# objective value is the first number in the first column of the last line of
+# the output.
+COST=$(tail -n 1 ${STDOUT} | grep -e '^[[:space:]]*[+-]\?[0-9]' | cut -f1)
+echo "$COST"
+# Comment the following line if you wish to preserve temporary files
+rm -f "${STDOUT}" "${STDERR}"
+exit 0
+
