Update description of options for ablation.

--- a/inst/templates/scenario.txt.tmpl
+++ b/inst/templates/scenario.txt.tmpl
@@ -79,8 +79,8 @@
 ## Command-line arguments provided to targetRunnerLauncher. The substrings
 ## \{targetRunner\} and \{targetRunnerArgs\} will be replaced by the value of
 ## the option targetRunner and by the arguments usually passed when calling
-## targetRunner, respectively. Example: "-m \{targetRunner\ --args
-## \{targetRunnerArgs\}"}.
+## targetRunner, respectively. Example: "-m {targetRunner --args
+## {targetRunnerArgs}"}.
 # targetRunnerLauncherArgs = "{targetRunner} {targetRunnerArgs}"
 
 ## Number of times to retry a call to targetRunner if the call failed.
