New scenario option `blockSize` for defining blocks of instances.

--- a/inst/templates/scenario.txt.tmpl
+++ b/inst/templates/scenario.txt.tmpl
@@ -65,6 +65,12 @@
 ## a multiple of eachTest.
 # firstTest = 5
 
+## Number of training instances, that make up a `block' in trainInstancesFile.
+## Elimination of configurations will only be performed after evaluating a
+## complete block and never in the middle of a block. Each block typically
+## contains one instance from each instance class (type or family).
+# blockSize = 1
+
 ## Number of instances evaluated between elimination tests.
 # eachTest = 1
 
