--- a/inst/templates/scenario.txt.tmpl
+++ b/inst/templates/scenario.txt.tmpl
@@ -73,15 +73,18 @@
 # targetRunner = "./target-runner"
 
 ## Executable that will be used to launch the target runner, when targetRunner
-## cannot be executed directly (.e.g, a Python script in Windows).
+## cannot be executed directly (e.g., a Python script in Windows).
 # targetRunnerLauncher = ""
 
-## Command-line arguments provided to targetRunnerLauncher. The substrings
-## \{targetRunner\} and \{targetRunnerArgs\} will be replaced by the value of
-## the option targetRunner and by the arguments usually passed when calling
-## targetRunner, respectively. Example: "-m {targetRunner --args
-## {targetRunnerArgs}"}.
-# targetRunnerLauncherArgs = "{targetRunner} {targetRunnerArgs}"
+## Command-line arguments provided to targetRunner (or targetRunnerLauncher if
+## defined). The substrings \{configurationID\}, \{instanceID\}, \{seed\},
+## \{instance\}, and \{bound\} will be replaced by their corresponding values.
+## The substring \{targetRunnerArgs\} will be replaced by the concatenation of
+## the switch and value of all active parameters of the particular
+## configuration being evaluated.  The substring \{targetRunner\}, if present,
+## will be replaced by the value of targetRunner (useful when using
+## targetRunnerLauncher).
+# targetCmdline = "{configurationID} {instanceID} {seed} {instance} {bound} {targetRunnerArgs}"
 
 ## Number of times to retry a call to targetRunner if the call failed.
 # targetRunnerRetries = 0
