--- a/inst/templates/scenario.txt.tmpl
+++ b/inst/templates/scenario.txt.tmpl
@@ -65,7 +65,7 @@
 ## `trainInstancesFile`. Elimination of configurations will only be performed
 ## after evaluating a complete block and never in the middle of a block. Each
 ## block typically contains one instance from each instance class (type or
-## family).
+## family) and the block size is the number of classes.
 # blockSize = 1
 
 ## Number of instances evaluated between elimination tests.
