--- a/inst/templates/scenario.txt.tmpl
+++ b/inst/templates/scenario.txt.tmpl
@@ -117,8 +117,10 @@
 ## performed. It determines the maximum budget of experiments for the tuning.
 # maxExperiments = 0
 
-## Maximum total execution time in seconds for the executions of
-## `targetRunner`. `targetRunner` must return two values: cost and time.
+## Maximum total execution time for the executions of `targetRunner`.
+## `targetRunner` must return two values: cost and time. This value and the
+## one returned by `targetRunner` must use the same units (seconds, minutes,
+## iterations, evaluations, ...).
 # maxTime = 0
 
 ## Fraction (smaller than 1) of the budget used to estimate the mean
