--- a/inst/templates/parameters.txt.tmpl
+++ b/inst/templates/parameters.txt.tmpl
@@ -27,9 +27,15 @@
 
 # 1:            2:                   3:     4:      5:
 param1          "--param1 "          i      (1, 10) | mode %in% c("x1", "x2")
-param2          "--param2 "          i      (1, 10) | mode %in% c("x1", "x3") && real > 2.5 && real <= 3.5
+param2          "--param2 "          i      (1, 10) | (mode %in% c("x1", "x3")) & (real > 2.5) & (real <= 3.5)
 mode            "--"                 c      ("x1" ,"x2", "x3")
 real            "--paramreal="       r      (1.5, 4.5)
 logreal         "--param-logreal="   r,log  (1, 100) # Logarithmic scale
 mutation        "--mutation="        o      ("none", "very low", "low", "medium", "high", "very high", "all")
 #unused         "-u "                c      (1, 2, 10, 20)
+
+[forbidden]
+mode == "x1" & mutation == "low"
+
+[global]
+digits = 4 # Maximum number of decimal places that are significant for numerical (real) parameters.
