Default value of trainInstancesDir is now "".

--- a/inst/templates/scenario.txt.tmpl
+++ b/inst/templates/scenario.txt.tmpl
@@ -24,7 +24,7 @@
 ## Directory where training instances are located; either absolute path or
 ## relative to current directory. If no `trainInstancesFiles` is provided, all
 ## the files in `trainInstancesDir` will be listed as instances.
-# trainInstancesDir = "./Instances"
+# trainInstancesDir = ""
 
 ## File that contains a list of training instances and optionally additional
 ## parameters for them. If `trainInstancesDir` is provided, `irace` will
