* scripts/generate-options.R: If vignettes is missing, use desription. Handle \parameter in description. Avoid trailing whitespace.  * scripts/irace_options.json: Remove vignette fields that duplicate description.

--- a/inst/templates/scenario.txt.tmpl
+++ b/inst/templates/scenario.txt.tmpl
@@ -61,7 +61,7 @@
 ## a multiple of `eachTest`.
 # firstTest = 5
 
-## Number of training instances, that make up a `block' in
+## Number of training instances, that make up a 'block' in
 ## `trainInstancesFile`. Elimination of configurations will only be performed
 ## after evaluating a complete block and never in the middle of a block. Each
 ## block typically contains one instance from each instance class (type or
