New scenario option cappingAfterFirstTest.

--- a/inst/templates/scenario.txt.tmpl
+++ b/inst/templates/scenario.txt.tmpl
@@ -193,6 +193,10 @@
 ## `elitist` is active, `maxTime > 0` and `boundMax > 0`.
 # capping = NA
 
+## If set to 1, elimination due to capping only happens after `firstTest`
+## instances are seen.
+# cappingAfterFirstTest = 0
+
 ## Measure used to obtain the execution bound from the performance of the
 ## elite configurations: median, mean, worst, best.
 # cappingType = "median"
