* scripts/irace_options.json (debugLevel): Mention valid values.

--- a/inst/templates/scenario.txt.tmpl
+++ b/inst/templates/scenario.txt.tmpl
@@ -160,7 +160,7 @@
 # quiet = 0
 
 ## Debug level of the output of `irace`. Set this to 0 to silence all debug
-## messages. Higher values provide more verbose debug messages.
+## messages. Higher values (1, 2 or 3) provide more verbose debug messages.
 # debugLevel = 0
 
 ## Seed of the random number generator (by default, generate a random seed).
