* scripts/irace_options.json: Clarify that --bound-par is a multiplication constant.

--- a/inst/templates/scenario.txt.tmpl
+++ b/inst/templates/scenario.txt.tmpl
@@ -213,8 +213,8 @@
 ## when capping is enabled.
 # boundDigits = 0
 
-## Penalization constant for timed out executions (executions that reach
-## `boundMax` execution time).
+## Penalization multiplication constant (PARX) for timed out executions
+## (executions that reach `boundMax` execution time).
 # boundPar = 1
 
 ## Replace the configuration cost of bounded executions with `boundMax`.
