--- a/inst/templates/scenario.txt.tmpl
+++ b/inst/templates/scenario.txt.tmpl
@@ -121,7 +121,7 @@
 
 ## Minimum number of runs (invocations of `targetRunner`) that will be
 ## performed. It determines the minimum budget of experiments for the tuning.
-## The actual budget depends on the number of parameters and `minSurvival`.
+## The actual budget depends on the number of parameters and `minNbSurvival`.
 # minExperiments = NA
 
 ## Maximum total execution time for the executions of `targetRunner`.
